<resources>
    <string name="title_home">Home</string>
    <string name="title_thesis">Jadwal Sidang</string>
    <string name="title_lecturer">Dosen</string>
    <string name="title_add_lecturer">Tambah Dosen</string>
    <string name="title_add_thesis_schedule">Buat Jadwal Sidang</string>
    <string name="title_detail_lecturer">Detail Dosen</string>
    <string name="title_detail_thesis_schedule">Detail Jadwal Sidang</string>
    <string name="title_add_lecturer_schedule">Jadwal Mengajar Dosen</string>

    <string name="msg_under_development">Sorry, this feature is under development.</string>
    <string name="hello_blank_fragment">@string/msg_under_development</string>
    <string name="plain_full_name">Nama Lengkap</string>
    <string name="plain_nip">NIP</string>
    <string name="plain_study_program">Program Studi</string>
    <string name="action_save_lecturer">Simpan Dosen</string>
    <string name="msg_add_lecturer">Lengkapi identitas dosen dibawah ini.</string>
    <string name="msg_lecturer_saved">Berhasil menyimpan profil dosen.</string>
    <string name="msg_lecturer_schedule_saved">Berhasil menyimpan jadwal mengajar dosen.</string>
    <string name="msg_thesis_schedule_saved">Berhasil menyimpan jadwal tugas akhir mahasiswa.</string>
    <string name="plain_monday">Senin</string>
    <string name="plain_tuesday">Selasa</string>
    <string name="plain_wednesday">Rabu</string>
    <string name="plain_thursday">Kamis</string>
    <string name="plain_friday">Jumat</string>
    <string name="action_edit_lecturer">Ubah Dosen</string>
    <string name="action_delete_lecturer">Hapus Dosen</string>
    <string name="msg_lecturer_deleted">Data dosen telah berhasil dihapus.</string>
    <string name="msg_delete_lecturer_confirmation">Apakah anda yakin ingin menghapus semua data dari dosen %s?</string>
    <string name="msg_delete_lecturer_schedule_confirmation">Apakah anda yakin ingin menghapus jadwal mengajar %1$s dari dosen %2$s?</string>
    <string name="msg_delete_thesis_schedule_confirmation">Apakah anda yakin ingin menghapus jadwal sidang mahasiswa %s?</string>
    <string name="action_yes">Ya</string>
    <string name="action_no">Tidak</string>
    <string name="action_save_lecturer_schedule">Simpan Jadwal Dosen</string>
    <string name="msg_add_lecturer_schedule">Lengkapi data jadwal dosen dibawah ini.</string>
    <string name="plain_class_subject">Mata Kuliah</string>
    <string name="plain_sks">SKS</string>
    <string name="plain_class_name">Kelas</string>
    <string name="plain_day">Hari</string>
    <string name="plain_time_of_study_start">Jam Mulai</string>
    <string name="plain_time_of_study_end">Jam Selesai</string>
    <string name="plain_lecturer">Dosen</string>
    <string name="action_edit_schedule">Ubah Jadwal</string>
    <string name="action_delete_schedule">Hapus Jadwal</string>
    <string name="plain_time">Jam</string>
    <string name="plain_time_of">Jam ke</string>
    <string name="plain_lesson_schedule">Jadwal Mengajar</string>
    <string name="plain_lecturer_name">Nama Dosen</string>
    <string name="empty_space" />
    <string name="title_edit_lecturer">Ubah Dosen</string>
    <string name="msg_lecturer_schedule_empty">\"Tidak ada jadwal mengajar pada hari ini.\"</string>
    <string name="msg_lecturer_empty">\"Belum ada data dosen yg tersimpan.\"</string>
    <string name="plain_welcome">Selamat Datang</string>
    <string name="app_description">Sistem Penjadwalan Tugas Akhir Mahasiswa\nUPN Veteran Jakarta 2020</string>
    <string name="plain_total_lecturer">Jumlah Dosen</string>
    <string name="plain_total_schedule">Total Jadwal</string>
    <string name="plain_today_schedule">Jadwal Hari Ini</string>
    <string name="msg_today_schedule_empty">\"Tidak ada jadwal sidang untuk hari ini.\"</string>
    <string name="msg_lecturer_schedule_deleted">Berhasil menghapus jadwal mengajar dosen.</string>
    <string name="msg_thesis_schedule_deleted">Berhasil menghapus jadwal sidang tugas akhir.</string>
    <string name="action_save_thesis_schedule">Simpan Jadwal Sidang</string>
    <string name="plain_thesis_title">Judul Tugas Akhir</string>
    <string name="plain_student_name">Nama Mahasiswa</string>
    <string name="plain_nim">NIM</string>
    <string name="plain_phone_number">Nomor Telepon</string>
    <string name="plain_lecturer_supervisor">Dosen Pembimbing</string>
    <string name="plain_lecturer_examiner_1">Dosen Penguji 1</string>
    <string name="plain_lecturer_examiner_2">Dosen Penguji 2</string>
    <string name="plain_daydate">Hari dan Tanggal</string>
    <string name="plain_thesis_daydate">Hari dan Tanggal Sidang</string>
    <string name="action_ok">Oke</string>
    <string name="title_error_message">Pesan Kesalahan</string>
    <string name="msg_thesis_schedule_empty">\"Belum ada jadwal sidang tugas akhir.\"</string>
    <string name="title_edit_thesis_schedule">Ubah Jadwal Sidang</string>
    <string name="text_schedules_count">%d Jadwal Sidang.</string>
</resources>
